v2, addons and AddonFile and error handler
